--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -1,6 +1,8 @@
 ---
+
 ---
-<div>
-<p>Footer - tilføj footerindhold</p>
+
+<div class="bg-slate-200 p-8 text-center text-sm md:text-base">
+  <p>Lavet med masser af hårdt arbejde af Sten Simons</p>
+  <p>Copyright 2015 Sten Simons & forlaget Mellem Linjerne</p>
 </div>
-  
