--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -1,5 +1,10 @@
 ---
+
 ---
+
 <div>
-    <button class="border-2 border-black"><slot /></button>
+  <button
+    class="bg-red-700 p-2 text-white rounded hover:bg-white hover:text-red-700 hover:border-2 hover:border-red-700 hover:shadow-2xl"
+    ><slot /></button
+  >
 </div>
